--- a/code/Android/app/src/main/res/layout/info.xml
+++ b/code/Android/app/src/main/res/layout/info.xml
@@ -63,7 +63,7 @@
                 <TextView
                     android:id="@+id/textLatitude"
                     style="@style/InfoValue"
-                    android:text="-" />
+                    android:text="" />
             </LinearLayout>
 
             <LinearLayout style="@style/InfoLayout">
@@ -87,7 +87,7 @@
                 <TextView
                     android:id="@+id/textDateTime"
                     style="@style/InfoValue"
-                    android:text="10 08, 2015 08:07PM" />
+                    android:text="-" />
             </LinearLayout>
 
             <LinearLayout style="@style/InfoLayout">
@@ -123,7 +123,7 @@
                     <TextView
                         android:id="@+id/textHorizontalActuatorPosition"
                         style="@style/InfoValue"
-                        android:text="9999.99" />
+                        android:text="-" />
                 </LinearLayout>
 
                 <LinearLayout
