--- a/code/Android/app/src/main/res/layout/datetime.xml
+++ b/code/Android/app/src/main/res/layout/datetime.xml
@@ -9,6 +9,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
     <TextView
         style="@style/HeaderLabel"
         android:text="Tracker Date/Time UTC"
@@ -69,7 +72,7 @@
             android:text="Upload Date/Time" />
 
     </LinearLayout>
-
+    </ScrollView>
 
 
 </FrameLayout>
