--- a/code/Android/app/src/main/res/layout/info.xml
+++ b/code/Android/app/src/main/res/layout/info.xml
@@ -41,6 +41,7 @@
                     android:id="@+id/textTrackerState"
                     style="@style/InfoValue"
                     android:text="-" />
+
             </LinearLayout>
 
             <LinearLayout style="@style/InfoLayout">
@@ -66,6 +67,36 @@
                     style="@style/InfoValue"
                     android:text="-" />
             </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/windLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="left">
+            <LinearLayout style="@style/InfoLayout">
+
+                <TextView
+                    style="@style/InfoLabel"
+                    android:text="Wind Speed: " />
+
+                <TextView
+                    android:id="@+id/textWindSpeed"
+                    style="@style/InfoValue"
+                    android:text="-" />
+            </LinearLayout>
+            <LinearLayout style="@style/InfoLayout">
+
+                <TextView
+                    style="@style/InfoLabel"
+                    android:text="High Wind Speed: " />
+
+                <TextView
+                    android:id="@+id/textHighWindSpeed"
+                    style="@style/InfoValue"
+                    android:text="-" />
+            </LinearLayout>
+        </LinearLayout>
 
             <LinearLayout style="@style/InfoLayout">
 
